Time: 1 ms (89.25%), Space: 44 MB (73.24%) - LeetHub